web-infras/parser/tests/fixtures/babel/core/legacy-octal/legacy-octal-after-use-strict-function/output.txt
[SyntaxError]: Octal literals are not allowed in strict mode (3,3)
3|  05;
 | ^
[SyntaxError]: Octal literals are not allowed in strict mode (8,3)
8|  04;
 | ^
[SyntaxError]: Octal literals are not allowed in strict mode (9,3)
9|  05;
 | ^
